--- a/assets/locales/ru/translation.json
+++ b/assets/locales/ru/translation.json
@@ -1,6 +1,40 @@
 {
     "Loading": "/TSlash | Портфолио",
 
+    "warning_header": "О, нет...",
+    "warning_description": "К сожалению, приложение не поддерживает Ваше разрешение экрана, оно может вызывать визуальные баги внутри приложения.",
+    "warning_button": "Всё равно продолжить",
+
+    "modal_svgError": "Пожалуйста, используйте только .svg файлы!",
+    "modal_nameError": "Вы не заполнили поле 'Название'!",
+    "modal_statusError": "Вы не выбрали статус",
+    "modal_urlError": "Вы не заполнили поле 'URL'!",
+    "modal_frameworksError": "Вы не заполнили поле 'Frameworks'!",
+    "modal_logoError": "Вы не выбрали логотип!",
+    "modal_connectionError": "Отсутствует соединение с интернетом",
+    "modal_header": "Добавьте новую работу",
+    "modal_namePlaceholder": "Название",
+    "modal_statusPlaceholder": "Статус",
+    "modal_urlPlaceholder": "URL",
+    "modal_frameworkPlaceholder": "Фреймворки",
+    "modal_logoText": "Логотип",
+    "modal_pickedFile": "Выбран файл: ",
+    "modal_buttonContent": "Добавить",
+    "modal_active": "Активный",
+    "modal_done": "Завершено",
+    "modal_inDevelopment": "В Разработке",
+
+    "confirmation_header": "Вы уверены?",
+    "confirmation_description": "После удаления работы Вы больше не сможете вернуть ее обратно. Удалить работу?",
+    "confirmation_cancel": "Отменить",
+    "confirmation_delete": "Удалить",
+
+    "update_header": "Редактирование работы",
+    "update_button": "Обновить",
+
+    "firebase_creatingTimestamp": "Запоминаю день...",
+    "firebase_loading:": "Подождите пожалуйста...",
+
     "language": "Русский",
 
     "scroll_arrow": "Листайте Вниз",
@@ -16,6 +50,10 @@
     "navbar_contacts": "Контакты",
 
     "backHeader": "Назад",
+
+    "owner_login": "Войти как владелец",
+    "owner_confirmed": "Вход подтвержден",
+    "owner_email_sended": "Мы отправили ссылку для входа на электронную почту владельца. Теперь Вы можете закрыть эту страницу",
 
     "indicator_welcome": "Привет",
     "indicator_about_me": "Обо мне",
@@ -49,6 +87,8 @@
     "contacts_messangers_header": "Мессенджеры",
     "contacts_emails_header": "Почта",
 
+    "egg": "военный 🚢 иди нах🖕й",
+
     "branding_first_header": "Брендинг",
     "branding_first_sectionName": "Типография",
     "branding_first_primaryFont": "Основной",
@@ -64,5 +104,25 @@
     "branding_third_header": "Логотип и шаблон",
     "branding_third_Fsection": "Исходники логотипа",
     "branding_third_Ssection": "Исходники шаблона",
-    "branding_third_Tsection": "Исходники Веб-Приложения"
+    "branding_third_Tsection": "Исходники Веб-Приложения",
+
+    "modal_addYour": "Добавьте Ваш",
+    "cards_add": "Добавить умение +",
+    "cards_learned": "Выучили что-то новое?",
+    "hardskills_markup": "Язык Гипертекстовой Разметки",
+    "hardskills_styling": "Язык Описания Внешнего Вида",
+    "hardskills_programming": "Язык Программирования",
+    "hardskills_progPlatform": "JS Окружение",
+    "hardskills_jsLib": "JS Библиотека",
+    "hardskills_framework": "Фреймворк",
+    "hardskills_cloud": "Облачная база",
+    "hardskills_verControl": "Система Контроля Версий",
+    "hardskills_IDE": "Среда Разработки",
+    "hardskills_desUtilities": "Утилиты Дизайна",
+
+    "softskills_communication": "Коммуникации",
+    "softskill_managment": "Менеджмент",
+
+    "404_desc": "Упс... Мы не смогли найти эту страницу",
+    "404_button": "На главную"
 }
