--- a/assets/locales/ru/translation.json
+++ b/assets/locales/ru/translation.json
@@ -87,7 +87,7 @@
     "contacts_messangers_header": "Мессенджеры",
     "contacts_emails_header": "Почта",
 
-    "egg": "",
+    "egg": "военный 🚢 иди нах🖕й",
 
     "branding_first_header": "Брендинг",
     "branding_first_sectionName": "Типография",
